adicionei um paragrafo

--- a/Site exemplo/index.html
+++ b/Site exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá. mundo.</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam totam quibusdam deserunt iure, id corporis aperiam consequatur deleniti, dolorum aliquam voluptatum quisquam et reiciendis sequi repellendus natus cum delectus ab!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem quaerat magnam omnis asperiores iste modi, consequuntur delectus ipsa inventore animi reiciendis ex dolor alias sit vel culpa vitae illo recusandae.</p>
 </body>
 </html>
